# tesla

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TESLA-DATA-SOURCES.md  cron-runt-check.sh  docker-compose.full.yml  docker-compose.yml  pyproject.toml  tesla-config-backup.json
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
Formula/: tesla-cli.rb
docs/: MIGRATION-PLAN-SOURCE-FIRST.md  TARGET-ARCHITECTURE.md  api-reference.md  architecture.md  configuration.md  data-sources.md  fleet-signed-setup.md  nav-route.md  roadmap.md  user-guide.md  why-tesla-cli.md
docs/research/: competitive-analysis.md  vatiolibre-comparison.md
notebooks/: consumption-model-probe.ipynb
src/tesla_cli/: __init__.py  __main__.py  app.py  config.py  exceptions.py  i18n.py  output.py
src/tesla_cli/api/: app.py  audit.py  auth.py  vehicle_hub.py
src/tesla_cli/auth/: oauth.py  tokens.py
src/tesla_cli/backends/: __init__.py  base.py  dossier.py  order.py  owner.py  simit.py  teslaMate.py  tessie.py
src/tesla_cli/cli/: app.py  i18n.py  output.py
src/tesla_cli/commands/: abrp.py  ble.py  charge.py  climate.py  config_cmd.py  dashboard.py  dossier.py  (+16 more)
tests/: conftest.py  test_api_app_refresh.py  test_api_doctor.py  test_api_routes.py  test_api_routes_new.py  test_auth.py  test_backends.py  test_browser_login.py  test_commands.py  test_doctor.py  test_domains.py  test_epa_fallbacks.py  test_events.py  test_events_purge.py  test_fleet_signed_backend.py  test_mission_control.py  test_models.py  test_nav_arrival.py  test_nav_cli.py  test_nav_dispatch.py  test_nav_geocode.py  test_nav_importers.py  test_nav_models.py  test_new_commands.py  test_order_backend.py  test_pipeline.py  test_planner_api.py  test_planner_calibrated.py  test_planner_chargers.py  test_planner_cli.py  test_planner_consumption.py  test_planner_elevation.py  test_planner_export.py  test_planner_graph.py  test_planner_models.py  test_planner_mvp.py  test_planner_routing.py  test_planner_weather.py  test_providers.py  test_providers_new.py  (+18 more)
ui/: index.html  ionic.config.json  package-lock.json  package.json  vite.config.ts
ui/public/: manifest.json
ui/src/: App.tsx
(+1247 files in other folders)
