[project]
name = "tesla-cli"
version = "2.6.0"
description = "CLI tool for Tesla order tracking and vehicle control"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["tesla", "cli", "ev", "electric-vehicle", "order-tracking", "vehicle-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "keyring>=25",
    "apprise>=1.9",
    "pyjwt>=2.10",
    "tomli-w>=1.1",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
fleet = ["tesla-fleet-api>=1.0"]
teslaMate = ["psycopg2-binary>=2.9"]
pdf = ["fpdf2>=2.7"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8", "pytest-httpx>=0.35", "ruff>=0.9"]

[project.scripts]
tesla = "tesla_cli.app:main"

[project.urls]
Homepage = "https://github.com/dacrypt/tesla"
Repository = "https://github.com/dacrypt/tesla"
Issues = "https://github.com/dacrypt/tesla/issues"
Changelog = "https://github.com/dacrypt/tesla/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tesla_cli"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real external APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "E402",    # module-level import not at top (intentional in dossier backend)
    "E701",    # multiple statements on one line (compact style in dossier commands)
    "B904",    # raise-from in except (pre-existing pattern, revisit later)
    "SIM105",  # contextlib.suppress (pre-existing pattern)
    "E731",    # lambda expressions used as closures capturing local variables
]
